--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,3 +2,98 @@
     height: 350px;
     object-fit: cover;
 }
+
+
+                                                              /*Mapa*/
+
+.mapa {
+    background: url(../img/mapa.png);
+    width: 200%;
+    height: 450px;
+    bottom: 50px;
+
+}
+
+#local {
+    background: #f3f3f3;
+    padding-bottom: 300px;
+    display: flex ;
+    justify-content: center;
+
+}
+ .wrapper{
+    width: 50%;
+    margin-left: 100px;
+    padding-top: 150px;
+ }
+
+ 
+                                                               /* formulario*/
+
+
+
+
+
+    
+
+*{
+    box-sizing: border-box;
+}
+
+.form-register{
+    width: 400px;
+    background: #24303c;
+    padding: 30px;
+    margin-top: 100px;
+    margin: auto;
+    border-radius: 4px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #f3f3f3;
+    box-shadow: 7px 13px 37px #000;
+
+     
+
+}
+
+.form-register h4 {
+font-size: 22px;
+margin-bottom: 20px;
+
+}
+
+.controls {
+    width: 100%;
+    background: #24303c;
+    padding: 10px;
+    border-radius: 4px;
+    margin-bottom: 16px;
+    border: 1px solid #1f53c5;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18px;
+
+
+}
+
+.form-register p {
+    height: 40px;
+    text-align: center;
+    font-size: 18px;
+    line-height: 40px;
+}
+
+.form-register a:hover {
+    color: white;
+    text-decoration: underline;
+
+}
+
+.form-register .botons {
+    width: 100%;
+    background: #1f53c5;
+    border: none;
+    padding: 12px;
+    color: white;
+    margin: 16px 0;
+    font-size: 16px;
+
+}
